fixed: spacing on text

--- a/code/scouting-hub/src/pages/MatchReportPage/index.css
+++ b/code/scouting-hub/src/pages/MatchReportPage/index.css
@@ -1,7 +1,7 @@
 .match-report {
   display: grid;
   max-width: 1000px;
-  grid-template-columns: 33% 17% 17% 33%;
+  grid-template-columns: 2fr 1fr 1fr 2fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 5px 5px;
   grid-template-areas:
